<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ADMIN DASHBOARD"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/addStudentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_student"
        android:layout_below="@id/loginText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/viewStudentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_students"
        android:layout_below="@id/addStudentButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/allocateHallButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allocate_hall"
        android:layout_below="@id/viewStudentButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
